node-gpu-exporter add nodeSelector

--- a/roles/ecp/templates/prometheus/manifests-all.yaml.j2
+++ b/roles/ecp/templates/prometheus/manifests-all.yaml.j2
@@ -445,3 +445,5 @@ spec:
           hostPort: 9102
       hostNetwork: true
       hostPID: true
+      nodeSelector:
+        nvidia.com/gpu: "yes"
