--- a/roles/glusterfs/deploy/kube-templates/deploy-heketi-deployment.yaml.j2
+++ b/roles/glusterfs/deploy/kube-templates/deploy-heketi-deployment.yaml.j2
@@ -54,6 +54,8 @@ spec:
           value: '14'
         - name: HEKETI_KUBE_GLUSTER_DAEMONSET
           value: "y"
+        - name: HEKETI_BACKUP_DB_TO_KUBE_SECRET
+          value: "y"
         ports:
         - containerPort: 8080
         volumeMounts:
