--- a/roles/glusterfs/deploy/kube-templates/heketi-deployment.yaml.j2
+++ b/roles/glusterfs/deploy/kube-templates/heketi-deployment.yaml.j2
@@ -35,6 +35,8 @@ spec:
         heketi: pod
     spec:
       serviceAccountName: heketi-service-account
+      nodeSelector:
+        storagenode: glusterfs
       containers:
       - image: {{ heketi_image }}
         imagePullPolicy: IfNotPresent
