--- a/roles/ecp/templates/mysql/mysql-controller.yaml.j2
+++ b/roles/ecp/templates/mysql/mysql-controller.yaml.j2
@@ -34,7 +34,7 @@ spec:
           name: mysql
         volumeMounts:
         - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql/firmament
+          mountPath: /var/lib/mysql
       volumes:
       - name: mysql-persistent-storage
         hostPath:
