--- a/roles/cni/templates/calico.yml.j2
+++ b/roles/cni/templates/calico.yml.j2
@@ -100,7 +100,7 @@ spec:
             - name: CALICO_IPV4POOL_CIDR
               value: "{{ pod_network_cidr }}"
             - name: IP_AUTODETECTION_METHOD
-              value: "MASTER_IP_ADDRESS"
+              value: "can-reach=MASTER_IP_ADDRESS"
             - name: CALICO_IPV4POOL_IPIP
               value: "always"
             # Disable IPv6 on Kubernetes.
