--- a/roles/prerequisite/templates/docker.j2
+++ b/roles/prerequisite/templates/docker.j2
@@ -1,3 +1,3 @@
 # /etc/sysconfig/docker
 
-OPTIONS='--insecure-registry={{ insecure_registry }}'
+OPTIONS='--insecure-registry={{ insecure_registry }} -g /home/lib/'
