--- a/roles/nvidia/templates/docker.j2
+++ b/roles/nvidia/templates/docker.j2
@@ -4,6 +4,10 @@
         "nvidia": {
             "path": "/usr/bin/nvidia-container-runtime",
             "runtimeArgs": []
+        },
+        "docker-runc": {
+            "path": "/usr/libexec/docker/docker-runc-current",
+            "runtimeArgs": []
         }
     }
 }
